# Background-Worker

./: .gitignore  Background-Worker.sln  CMakeLists.txt  ProjectTrees  README.md  generate_structure.sh  mk.md
.cache/clangd/index/: main.cpp.700DD17E75B7A9B0.idx  text.h.2B733C0680CE561B.idx
.history/UnrealEngine_C++_Background_Work/: CMakeLists_20241024203608.txt  CMakeLists_20241024203708.txt  CMakeLists_20241030025934.txt  CMakeLists_20241030030034.txt  CMakeLists_20241030030713.txt  CMakeLists_20241030031527.txt  main_20241024193438.cpp  main_20241026225447.cpp  main_20241026225653.cpp  main_20241026231225.cpp  main_20241026232354.cpp  main_20241026235239.cpp  main_20241026235254.cpp  main_20241028022243.cpp  main_20241030031110.cpp
ASP_Net_Core_Api/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
ASP_Net_Core_Api/Pages/Shared/: _Layout.cshtml
ASP_Net_Core_Api/Properties/: launchSettings.json
UnrealEngine_C++_Background_Work/: CMakeLists.txt  main.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/: GameServer.h  includePublic.h
src/cpp/src/: GameLogic.cpp  GameServer.cpp
src/go/: main.go
src/go/handlers/: product_handler.go  user_handler.go
src/go/utils/: captcha.go
src/scripts/: deploy.sh
tests/go/: user_handler_test.go
